Kleopatra: Config dialog doesn't load "Treat .p7m files without extensions as mails" option
Closed, ResolvedPublic

Assigned To
Authored By
ikloecker
Mar 20 2024, 2:14 PM

Description

How to reproduce:

  • Open config dialog and navigate to Crypto Operations page

Observation:
The option "Treat .p7m files without extensions as mails" is unchecked although it should be checked by default.

Reset (which should reset all options to the saved values) has no effect for this option:

  • Check the option. Click Reset. -> Option doesn't change
  • Uncheck the option. Click Reset. -> Option still doesn't change

Defaults (which should reset all options to the defaults) has no effect for this option:

  • Check the option. Click Defaults. -> Option doesn't change
  • Uncheck the option. Click Defaults. -> Option still doesn't change

This option was added with T6792. This issue also exists in vsd32.

Event Timeline

ikloecker created this task.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker changed the task status from Open to Testing.Mar 21 2024, 8:54 AM

Fixed in master.

ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.Oct 1 2024, 3:55 PM
ebo moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ebo added a subscriber: ebo.

Works. Tested with VS-Desktop-3.2.94.474-Beta and Gpg4win 4.4

ebo edited projects, added vsd33 (vsd-3.3.0); removed vsd33.