Load value of "Treat .p7m files without extensions as mails" option

GnuPG-bug-id: 7048
(cherry picked from commit 98cebeb2746b3f169aa616d55ded0ae8f7b50e48)